Need only teacher

--- a/scheduling/src/main/resources/templates/MainView/main-view.html
+++ b/scheduling/src/main/resources/templates/MainView/main-view.html
@@ -29,14 +29,15 @@
 	content="width=device-width, initial-scale=1"
 >
 
-<link
+ <link
 	rel="apple-touch-icon"
-	href="https://i.imgur.com/QRAUqs9.png"
+	th:href="@{/images/gardnerLogo.png}"
 >
+
 <link
 	rel="shortcut icon"
-	href="https://i.imgur.com/QRAUqs9.png"
->
+	th:href="@{/images/gardnerLogo.png}"
+> 
 <link
 	rel="stylesheet"
 	href="https://cdn.jsdelivr.net/npm/normalize.css@8.0.0/normalize.min.css"
