Adding final Validation to Breaks

--- a/scheduling/src/main/resources/templates/MainView/main-view.html
+++ b/scheduling/src/main/resources/templates/MainView/main-view.html
@@ -30,14 +30,15 @@
 >
 
  <link
-	rel="apple-touch-icon"
+	rel="icon"
+	type="image/png"
 	th:href="@{/images/gardnerLogo.png}"
 >
 
-<link
+<!-- <link
 	rel="shortcut icon"
 	th:href="@{/images/gardnerLogo.png}"
-> 
+>  -->
 <link
 	rel="stylesheet"
 	href="https://cdn.jsdelivr.net/npm/normalize.css@8.0.0/normalize.min.css"
