--- a/scheduling/src/main/resources/templates/room/room list/room-form.html
+++ b/scheduling/src/main/resources/templates/room/room list/room-form.html
@@ -174,7 +174,7 @@
 			<div class="col-md-7">
 				<a
 					th:if="${action.equals('Update Room')}"
-					th:href="@{/room//shift/form}"
+					th:href="@{/room/shift/form}"
 					class="btn btn-success"
 					style="margin-bottom: 10px;"
 				> Add RoomShift</a>
