--- a/scheduling/src/main/resources/templates/subject/subject list/subject-list-form.html
+++ b/scheduling/src/main/resources/templates/subject/subject list/subject-list-form.html
@@ -273,7 +273,7 @@
 							<div class="col-md-12">
 								<div class="card">
 									<div class="card-header">
-										<strong class="card-title">Subject List</strong>
+										<strong class="card-title">Strand List</strong>
 									</div>
 									<div class="card-body">
 										<table
@@ -282,27 +282,13 @@
 										>
 											<thead>
 												<tr>
-													<th>Id</th>
-													<th>Name</th>
-													<th>Code</th>
-													<th>Hour</th>
-													<th>Minute</th>
-													<th>Units</th>
-													<th>Category</th>
-
+													<th>Strand Name</th>
 												</tr>
 											</thead>
 											<tbody>
-												<tr th:each="subject: ${subjects}">
-													<td th:text="${subject.id}"></td>
-													<td th:text="${subject.subjectName}"></td>
-													<td th:text="${subject.subjectCode}"></td>
-													<td th:text="${subject.hourCost}"></td>
-													<td th:text="${subject.minuteCost}"></td>
-													<td th:text="${subject.subjectUnit}"></td>
-													<td th:text="${subject.is_Major}"></td>
+												<tr th:each="strand: ${strand_list}">
+													<td th:text="${strand.strandName}"></td>
 												</tr>
-											</tbody>
 										</table>
 									</div>
 								</div>
