--- a/scheduling/src/main/resources/templates/student/student list/student-form.html
+++ b/scheduling/src/main/resources/templates/student/student list/student-form.html
@@ -228,13 +228,12 @@
 						</div>
 					</div>
 
-
 					<div class="form-group col-md-12">
 						<div class="input-group mb-3">
 							<input
 								type="submit"
 								class="btn btn-success form-control"
-								value="Save Student"
+								th:value="${action}"
 							>
 						</div>
 					</div>
@@ -244,6 +243,7 @@
 								onclick="button_delete()"
 								style="color: white;"
 								class="btn btn-danger form-control"
+								th:if="${action.equals('Update Student')}"
 							> Delete </a>
 						</div>
 					</div>
@@ -253,6 +253,7 @@
 			</div>
 
 			<div class="col-md-7">
+			
 				<div class="content">
 					<div class="animated fadeIn">
 						<div class="row">
