--- a/scheduling/src/main/resources/templates/student/student list/student-list.html
+++ b/scheduling/src/main/resources/templates/student/student list/student-list.html
@@ -163,7 +163,7 @@
 														style="width: 100%; color:white;"
 														class="btn btn-danger btn-sm"
 														th:href="@{/student/delete(student_id=${student.id})}"
-														onclick="if (!(confirm('Are you sure you want to delete this Strand?'))) return false"
+														onclick="if (!(confirm('Are you sure you want to delete this Student?'))) return false"
 													> <i
 															class="fa fa-trash"
 															aria-hidden="true"
