--- a/scheduling/src/main/resources/templates/teacher/teacher information/teacher-information.html
+++ b/scheduling/src/main/resources/templates/teacher/teacher information/teacher-information.html
@@ -50,7 +50,7 @@ xmlns:th="http://www.thymeleaf.org"
 
                       <div class="col-md-12" >
 
-                          <a th:href=@{/subject/form} class="btn btn-success" style="margin-bottom:10px;">Add Teacher</a>
+                          <a th:href=@{/teacher/form} class="btn btn-success" style="margin-bottom:10px;">Add Teacher</a>
                           <div class="card">
                               <div class="card-header" >
                                   <strong class="card-title">Subject List</strong>
